# django-recurrence

./: .gitignore  .readthedocs.yaml  .travis.yml  CHANGES.rst  LICENSE  MANIFEST.in  Makefile  README  README.md  README.rst  pyproject.toml  pytest.ini  requirements.txt  requirements_test.txt  requirements_text.txt  setup.py  tox.ini
.github/workflows/: release.yml  test.yml
docs/: Makefile  changelog.rst  conf.py  contributing.rst  github.py  index.rst  installation.rst  make.bat  usage.rst
docs/usage/: api.rst  getting_started.rst  index.rst  recurrence_field.rst
recurrence/: __init__.py  base.py  choices.py  compat.py  exceptions.py  fields.py  forms.py  managers.py  models.py  settings.py  tests.py
recurrence/locale/ar/LC_MESSAGES/: django.mo  django.po  djangojs.mo  djangojs.po
recurrence/locale/de/LC_MESSAGES/: django.mo  django.po  djangojs.mo  djangojs.po
recurrence/locale/en/LC_MESSAGES/: django.mo  django.po  djangojs.mo  djangojs.po
recurrence/locale/es/LC_MESSAGES/: django.mo  django.po  djangojs.mo  djangojs.po
recurrence/locale/eu/LC_MESSAGES/: django.mo  django.po  djangojs.mo  djangojs.po
recurrence/locale/fr/LC_MESSAGES/: django.mo  django.po  djangojs.mo  djangojs.po
recurrence/locale/he/LC_MESSAGES/: django.mo  django.po  djangojs.mo  djangojs.po
recurrence/media/css/: recurrence.css
recurrence/media/js/: recurrence-widget.js  recurrence.js  widget.js
recurrence/migrations/: 0001_initial.py  0002_alter_date_id_alter_param_id_alter_recurrence_id_and_more.py
recurrence/static/js/: recurrence-widget.js
tests/: models.py  settings.py  test_exclusions.py  test_fields.py  test_magic_methods.py  test_managers_recurrence.py  test_managers_rule.py  test_nulls.py  test_occurrences.py  test_patterns.py  test_recurrences_without_limits.py  test_saving.py  test_serialization.py  test_settings.py  test_to_text.py  test_to_weekday.py  test_tz.py  test_weekday.py
(+20 files in other folders)
